--- a/lb-maze/maze.html
+++ b/lb-maze/maze.html
@@ -22,7 +22,7 @@
       <br />
       time: <span id="id-timer">00:00</span>
     </div>
-    <canvas id="id-canvas" width="950" height="950"> </canvas>
+    <canvas id="id-canvas" style="vertical-align: bottom"> </canvas>
     <img id="id-man" src="img/icon_e_smile.gif" alt="" style="position: relative;height:6px; width: 6px; display: block" />
     <script type="text/javascript" src="js/maze.js"> </script>
   </body>
