add game numbers

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <ul>
     <li><a href="https://github.com/vicalloy/">vicalloy@Github</a></li>
     <li><a href="lb-maze/maze.html">LB-Maze</a><br />A Maze Game</li>
+    <li><a href="numbers/index.html">Tap The Numbers</a><br />Tap 1 to 36 as fast as possible.</li>
   </ul>
 </body>
 </html>
