--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <li><a href="https://github.com/vicalloy/">vicalloy@Github</a></li>
     <li><a href="lb-maze/maze.html">LB-Maze</a><br />A Maze Game</li>
     <li><a href="numbers/index.html">Tap The Numbers</a><br />Tap 1 to 36 as fast as possible.</li>
+    <li><a href="/china-population/">China Population</a><br />Chart for china population.</li>
   </ul>
 </body>
 </html>
